--- a/src/index.css
+++ b/src/index.css
@@ -13,8 +13,9 @@ img{
   width: 100%;
   height: 100%;
 }
-/* button{
+button{
   background-color: none;
   border: none;
   outline: none;
-} */
+  background-color: transparent;
+}
