--- a/src/components/SignIn/SignIn.scss
+++ b/src/components/SignIn/SignIn.scss
@@ -1,67 +1,70 @@
-@import '../../assets/styles/variables';
+@import "../../assets/styles/variables";
 
-.signin{
-    position: relative;
+.signin {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
+  &__card {
+    border: 1px solid $creamy-white;
+    min-width: 32rem;
+    min-height: 40rem;
     display: flex;
-    justify-content: center;
     align-items: center;
-    padding: 2rem;
-    &__card{
-        background-color: $white;
-        border: 1px solid $creamy-white;
-        min-width: 32rem;
-        min-height: 40rem;
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        &--header{
-            height: 10rem;
-            background-color: $dark-blue;
-            width: 100%;
-            color: $white;
-            font-size: 2rem;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        &--input{
-            padding: 2rem 0;
-            width: 60%;
-            display: flex;
-            flex-direction: column;
-            gap: 1.5rem;
-            font-size: 1.5rem;
-            input{
-                min-height: 2rem;
-                border-radius: .5rem;
-                outline: none;
-                border: none;
-                border: 1px solid black;
-                padding: .1rem;
-                text-align: center;
-                font-size: 1.3rem;
-                &:active{
-                    outline: none;
-                }
-            }
-        }
-        &--footer{
-            display: flex;
-            flex-direction: column;
-            gap: 1rem;
-
-        }
+    flex-direction: column;
+    background-color: $white;
+    box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.11);
+    -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.11);
+    -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.11);
+    &--header {
+      height: 10rem;
+      background-color: $dark-blue;
+      width: 100%;
+      color: $white;
+      font-size: 2rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
+    &--input {
+      padding: 2rem 0;
+      width: 60%;
+      display: flex;
+      flex-direction: column;
+      gap: 1.5rem;
+      font-size: 1.5rem;
+      input {
+        min-height: 2rem;
+        border-radius: 0.5rem;
+        outline: none;
+        border: none;
+        border: 1px solid black;
+        padding: 0.1rem;
+        text-align: center;
+        font-size: 1.3rem;
+        &:active {
+          outline: none;
+        }
+      }
+    }
+    &--footer {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+  }
 }
-.signup__btn,.signin__btn{
-    border: 1px solid $dark-blue;
-    background-color: $light-red;
-    color: $white;
-    border-radius: .5rem;
-    padding: .5rem 1rem;
-    font-size: 1.3rem;
-    transition: all .4s;
-    &:hover{
-        background-color: $dark-blue;
-    }
+.signup__btn,
+.signin__btn {
+  border: 1px solid $dark-blue;
+  background-color: $light-red;
+  color: $white;
+  border-radius: 0.5rem;
+  padding: 0.5rem 1rem;
+  font-size: 1.3rem;
+  transition: all 0.4s;
+  &:hover {
+    background-color: $dark-blue;
+  }
 }
