chore: updating doctor/hospital dashboard

--- a/src/components/Doctor-Hospital/Doctor-Hospital.scss
+++ b/src/components/Doctor-Hospital/Doctor-Hospital.scss
@@ -39,6 +39,11 @@
             color: $white;
           }
         }
+        .selected {
+          background: $dark-blue;
+          color: $white;
+        }
+
         .list {
           border-right: none;
         }
