--- a/src/components/SignUp/SignUp.scss
+++ b/src/components/SignUp/SignUp.scss
@@ -19,6 +19,13 @@
     box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.11);
     -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.11);
     -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.11);
+    h2 {
+      background:$light-sky-blue;
+      padding: 1rem;
+      width: 94%;
+      margin: 0;
+      text-align: center;
+    }
     &--header {
       border-top-left-radius: 0.4rem;
       border-top-right-radius: 0.4rem;
@@ -56,6 +63,7 @@
       display: flex;
       flex-direction: column;
       gap: 0.5rem;
+      padding: 1rem;
     }
   }
 }
@@ -68,6 +76,8 @@
   padding: 0.5rem 1rem;
   font-size: 1.3rem;
   transition: all 0.4s;
+  width: 20rem;
+
   &:hover {
     background-color: $dark-blue;
   }
