--- a/src/components/SignIn/SignIn.scss
+++ b/src/components/SignIn/SignIn.scss
@@ -6,6 +6,7 @@
   justify-content: center;
   align-items: center;
   padding: 2rem;
+  min-height: 80vh;
   &__card {
     border: 1px solid $creamy-white;
     min-width: 32rem;
