--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -2,9 +2,9 @@
 
 
 
-.main-container {
+.button-container {
 
-  min-height: 80vh;
+  // min-height: 80vh;
   display: flex;
   justify-content: center;
   align-items: center;
