chore: updating home page

--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -8,9 +8,25 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background: $white;
 
 
   div {
+    text-align: center;
+
+    img {
+      width: 20rem;
+    }
+    
+    h1 {
+      font-size: 2rem;
+      margin: 0;
+    }
+
+    p {
+      font-size: 1.5rem;
+      margin: 0;
+    }
 
     button {
       background: $dark-blue;
