--- a/src/components/NotFeelingWell/NotFeelingWell.scss
+++ b/src/components/NotFeelingWell/NotFeelingWell.scss
@@ -4,15 +4,22 @@
   justify-content: center;
   align-items: center;
   padding: 2rem 0;
+  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.11);
+  -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.11);
+  -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.11);
+  background-color: $white;
+  border: 1px solid black;
   &__card {
     max-width: 80%;
     min-height: 30rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: $white;
     padding: 2rem 3rem;
     &--heading {
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
       font-size: 2rem;
     }
     &--form {
@@ -41,4 +48,9 @@
       }
     }
   }
+}
+.close{
+  display: flex;
+  justify-content: flex-end;
+  cursor: pointer;
 }
